Wip-140 Fix datepicker on modal visible, make new helper formatDate to cut down code, add logic for disabled deactivation button

--- a/src/components/molecules/DatePickerInput/classes.module.scss
+++ b/src/components/molecules/DatePickerInput/classes.module.scss
@@ -215,7 +215,3 @@
 :global(.react-datepicker__day--disabled:hover) {
   color: $color-white;
 }
-
-:global(.react-datepicker__tab-loop) {
-  position: fixed;
-}
